<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ecommerce_icon"/>

    <EditText
        android:id="@+id/etlogin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/activity_login_edittext_username"/>

    <EditText
        android:id="@+id/etlogin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/activity_login_edittext_password"/>

    <Button
        android:id="@+id/activity_login_btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/activity_login_button_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_label_new_user"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_label_signup"
            android:layout_marginLeft="10dp"
            android:onClick="processSignupLinkClick"
            android:textColor="@color/coloricon"/>
    </LinearLayout>
</LinearLayout>